@@ -1,5 +1,7 @@
 AUX tintin-2.00.9-ldpermission.patch 327 SHA256 01f8035f95b6db1c35b0f5d2479428c22ee74832adcdac658fd9febb8814ca80 SHA512 52c32986552e8f97f0c0876e5256a71f6f2c574618ca754ecf7004d68988dadd407340f1236b445d6c8702409cc5d9845b1c60c589bf4f28ebf8c5fdf78dfce0 WHIRLPOOL b3b00d2ac46e9270c3fea8da1dae5425b0df06d0584e7a665719ad630309b0efd77a9055d392161fe070d307ed7d7b040bf1638319640814bd00a2d23e2093e7
 DIST tintin-2.00.9.tar.gz 276024 SHA256 cafeee9b60de39d957def5782fb4f8cb29a05af69dc96d3e5807c2d3fb541275 SHA512 88880d7c45028fdc4e20d0acb065e7d578d6dac995a590974b62e418845227bf734f270a6908c8bad13b04265a1c08207e9974c2756b4635697950414e404ba6 WHIRLPOOL 779a39b6c280c0104dc3568d8ab1d7db67cd4e2945a1f501ed8471387a9fc4ccdc0bf7135ce926cb657ae6a95b5cbe7707da49187e8da31d9c8710851abb848a
+DIST tintin-2.01.0.tar.gz 293651 SHA256 e0e35463a97ee5b33ef0b29b2c57fa8276c4e76328cb19c98a6ea92c603a9c76 SHA512 9bad5c3900965ff009c130f5bbeeee197b16bddaf4068329fd3282945ff7b8e17517254468c14f9c9979828ca3ea8bfebacdd3bbfb436d92a02b6ed9ed30af4f WHIRLPOOL e2fb023a38f0be63868ae0f333d19f621624f7b8b0bc8498d0b8cceb0e344df52ba7419829f341b7632a7f1d2c535add215c07911693ee479da74c616433d12a
 EBUILD tintin-2.00.9.ebuild 885 SHA256 b36dc9177b91ed8101403d51b4185723dce9216e737f583cc57c9cc25097db3b SHA512 e31ae500b3210482c517213ecd9776745bbc87c9a1836872883cd07fb6375bedd71d47af64d917826146e3092a61fecbee6c5192f5a1dffe8dfee9d1dc0de20e WHIRLPOOL eb233b5f32f3177cd83adc9d48255972b76e0f2d2542c06e4f018fca1539dc880e3ea93f5b198a471ba8ac97e128e889e122cb97ce267f9b394ca3a7396e6d8c
-MISC ChangeLog 16070 SHA256 9c8d24841a88f3d37a15d4c712d7557d729c2d86b62fb15cbc4d358ae28ec2a2 SHA512 14d77ccdd14dd8afd26cd0718fcbc2d819237eb44c4feb780e6950e51c851915f58c1ca1dde3081522676daaaab53faddf1fe83b7643efe0c4567e6f64dd341b WHIRLPOOL d2e38dec75ff956175ecbd0c7f795a17bd72c13e8b0f743b78c82490fbf82e0fe4cfeeeda9345c24177949a2594a80f026faa588507c22f36413b62fd09174b3
+EBUILD tintin-2.01.0.ebuild 854 SHA256 1b66c8431acf49492932e4dc06a102cac273167b9a780994b6eebf10a0fc9f0f SHA512 d200316eb57973ed12f0ebc2b40db1644aa377ce6abc29aaae080d8f614ef335fd5b63e8b6bcc768a2b53e98613843b00095212820de6302a56f51fb6b298115 WHIRLPOOL 1a708940ea7cafcd4263896ccdf3045fb945c1130e92d768365f28ae2e1d310cbfeaeaafe068dbb7671a8a7e05442c21ecfa2f1f4a88b718b5cf1b4d083d3d22
+MISC ChangeLog 16194 SHA256 0765236d4b1d54678e725573bdb5206820d8fd5c0938b66b36cd72678269e4e0 SHA512 3f24d35830ebf6e897157acd972f8bb7faa9093703c23fd6dfb3efca0e0e172cc3e5ccd8105ed239359a537188cf76155221ce817f46e1717f9f7723370c808a WHIRLPOOL fede22be4167187ece07adc5b9961918dd28b7ed5107f68a8cb4dce1eb71fc1ed77e1369173f5c332adc095caf98a1f624284794995ca99e660be5b619074819
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
