@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
+DEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline sys-libs/ncurses
+DESCRIPTION=(T)he k(I)cki(N) (T)ickin d(I)kumud clie(N)t
+EAPI=5
+HOMEPAGE=http://tintin.sourceforge.net/
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline sys-libs/ncurses games-misc/games-envd
+SLOT=0
+SRC_URI=mirror://sourceforge/tintin/tintin-2.01.0.tar.gz
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	games	e221fed675714bd5545b7488aed9f822	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=9a7a25f5b148f262cc9187d7db3b595a
